# mailu-autoreg

./: .example.env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __main__.py  settings.py
app/utils/: logger.py  utils.py
