[project]
name = "mailu-autoreg"
version = "0.1.0"
description = ""
authors = [
    {name = "h1w",email = "bpqvgq@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.6"
pre-commit = "^4.1.0"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bufbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B904", # syntax error
    # "C901", # too complex
    "W191", # indentation contains tabs
    "B904", # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # allow imported but unused for __init__.py

[tool.ruff.lint.pyupgrade]
# Preserve types, event if a file imports `from __future__ import annotations`
keep-runtime-typing = true
